hphp/hack/test/typecheck/case_type/sealed_to_reified.php.exp
ERROR: File "sealed_to_reified.php", line 8, characters 11-12:
Invalid case type declaration. More than one variant of `CT` could contain values with the same runtime tag (Typing[4475])
  File "sealed_to_reified.php", line 8, characters 16-19:
  This is the type `IFoo`, which includes **instances of the class ReifiedFoo**
  File "sealed_to_reified.php", line 4, characters 11-14:
    via the sealed interface `IFoo`
  File "sealed_to_reified.php", line 8, characters 23-37:
  It may overlap with `ReifiedFoo<int>`, which includes **instances of the class ReifiedFoo<int>**
  File "sealed_to_reified.php", line 8, characters 11-12:
  Because it is possible for values to be both **instances of the class ReifiedFoo** and **instances of the class ReifiedFoo<int>**, `IFoo` and `ReifiedFoo<int>` cannot be in the same case type
