hphp/hack/test/typecheck/case_type/sealed_to_reified.php
<?hh

<<__Sealed(ReifiedFoo::class)>>
interface IFoo {}

abstract class ReifiedFoo<reify T> implements IFoo {}

case type CT = IFoo | ReifiedFoo<int>;
